--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-Flask==2.2.5
-Flask-SQLAlchemy==3.0.3
+Flask==3.1.2
+Flask_SQLAlchemy==3.1.1
+Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.4.4
-Flask-Cors==4.0.1
-Werkzeug==2.2.3
+pymysql==1.1.2
 python-dotenv==1.0.0
-Pillow==9.5.0
-tensorflow==2.20.0
-   # optional, install only if you will run model locally
-numpy==1.24.4
+flask-cors==4.0.1
