--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==3.1.2
-Flask_SQLAlchemy==3.1.1
-Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.4.4
-pymysql==1.1.2
-python-dotenv==1.0.0
-flask-cors==4.0.1
+flask
+flask_sqlalchemy
+flask_bcrypt
+flask_jwt_extended
+flask_cors
+pymysql
+python-dotenv
+tensorflow==2.15.0   # (agar model bhi deploy karna hai to)
